[package]
name = "nyekis-search"
version = "1.0.0"
edition = "2024"
authors = ["Nyeki"]
description = "A terminal-based search tool using Google Search API."
license = "MIT"
repository = "https://github.com/Nekidev/search"
readme = "README.md"

[dependencies]
clap = { version = "4.5.51", features = ["env", "derive"] }
dotenvy = "0.15.7"
open = "5.3.2"
ratatui = "0.29.0"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
urlencoding = "2.1.3"

[[bin]]
name = "search"
path = "src/main.rs"
